# AppFrameSystem

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  af_nocopy.h
src/conf/: af_conf_mgr.cpp  af_conf_mgr.h  af_conf_var.h  af_configure.cpp  af_configure.h  af_transformer.h  conf.cmake
src/core/: CMakeLists.txt  af_status_widget.cpp  af_status_widget.h  af_title_widget.cpp  af_title_widget.h  af_widget.cpp  af_widget.h
src/core/global/: af_enum.h
src/core/private/: af_frameless_p.cpp  af_frameless_p.h
src/log/: af_logger.cpp  af_logger.h  logger.cmake
src/resource/: af.qrc
src/resource/qss/: dark.qss
test/: CMakeLists.txt  test_frameless.cpp  test_logger.cpp
